--- a/lingo-racer/src/App.css
+++ b/lingo-racer/src/App.css
@@ -17,6 +17,21 @@
     transform: translateY(-50%);
 }
 
+.text-indent {
+    text-indent: 2em;
+}
 .textglow {
     text-shadow: 0 0 10px #fff
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0
+    }
+    50% {
+        opacity: 1
+    }
+    100% {
+        opacity: 0
+    }
 }
